<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="_ssavebutton">保存</string>
    <string name="_scancelbutton">取消</string>

    <string name="app_name">AAhelp</string>
    <string name="action_settings">Settings</string>
    <string name="_smyappname">AA小助手</string>
    <string name="_sbottomtext">欢迎你使用AA分账</string>
    <string name="title_activity_activity_frame">ActivityFrame</string>
    <string name="_sconsumption">记录消费</string>
    <string name="_ssearch">查询消费</string>
    <string name="_sstatistic">统计管理</string>
    <string name="_sbook">账本管理</string>
    <string name="_stype">类别管理</string>
    <string name="_suser">人员管理</string>
    <string name="_suserhint">请输入用户名</string>
    <string name="_susertype">%s用户</string>
    <string name="_sedituser">修改</string>
    <string name="_sadduser">新增</string>
    <string name="_sbuttonsavetext">保存</string>
    <string name="_sbuttoncanceltext">取消</string>
    <string name="_snullusername">用户名不能为空</string>
    <string name="_sillegleusername">用户名不合法，必须为字母数字或者汉字</string>
    <string name="_suserisexist">用户名已存在</string>
    <string name="_sinsertsuccess">新增用户成功</string>
    <string name="_seditsuccess">修改用户成功</string>
    <string name="_sdeleteuser">删除</string>
    <string name="_sdeleteuserbutton">删除用户</string>
    <string name="_scanceldeletebutton">取消</string>
    <string name="_sdeleteusertitle">删除用户%s</string>
    <string name="_deletefail">抱歉，删除失败</string>

    <string name="_sischeckdefaultbook">是否设置为默认账本</string>
    <string name="_silligledefaultbook">至少需要有一个默认账本</string>
    <string name="_sbookhint">请输入账本名</string>
    <string name="_sbooktype">%s账本</string>
    <string name="_seditbook">修改</string>
    <string name="_saddbook">新增</string>
    <string name="_snullbookname">账本名不能为空</string>
    <string name="_silleglebookname">账本名不合法，必须为字母数字或者汉字</string>
    <string name="_sbookisexist">账本名已存在</string>
    <string name="_sdeletebook">删除账本</string>
    <string name="_sdeletebookbutton">删除账本</string>
    <string name="_sdeletebooktitle">删除账本%s</string>
    <string name="_seditbooksuccess">修改账本成功</string>
    <string name="_sinsertbooksuccess">新增账本成功</string>

    <string name="_sflag">消费</string>
    <string name="_sChildTypeCount">%s子类别</string>
    <string name="_stypetitle">类别管理（%s）</string>
    <string name="_stypehint">请输入类别名</string>
    <string name="_stypetype">%s类别</string>
    <string name="_sedittype">修改</string>
    <string name="_saddtype">新增</string>
    <string name="_snulltypename">类别名不能为空</string>
    <string name="_sillegletypename">类别名不合法，必须为字母数字或者汉字</string>
    <string name="_stypeisexist">类别名已存在</string>
    <string name="_sdeletetype">删除类别</string>
    <string name="_sdeletetypebutton">删除类别</string>
    <string name="_sdeletetypetitle">删除类别%s</string>
    <string name="_sedittypesuccess">修改类别成功</string>
    <string name="_sinserttypesuccess">新增类别成功</string>
    <string name="_sdefaultselect">-请选择-</string>
    <string name="_sfaile">保存失败</string>
    <string name="_ssuccess">保存成功</string>

    <string name="_spayoutsave">保存支出</string>
    <string name="_scancelpayout">取消保存</string>
    <string name="_sselectbook">选择账本</string>
    <string name="_ssetamount">支付总和</string>
    <string name="_shintamount">请输入支付总和</string>
    <string name="_sselecttype">选择类别</string>
    <string name="_shinttype">请选择类别</string>
    <string name="_spaydata">支付日期</string>
    <string name="_spayouttype">支出类型</string>
    <string name="_spayuser">选择用户</string>
    <string name="_shintpayuser">请选择支付用户</string>
    <string name="_shintcomment">请输入消费备注</string>
    <string name="_spayouttotalmessage">共%1$s笔，合计消费%2$s</string>
    <string name="_saddpayout">新增支出</string>
    <string name="_seditpayout">修改支出</string>
    <string name="_serroramount">总额必须为数字</string>
    <string name="_snulltype">请选择消费类别</string>
    <string name="_snulluser">请选择一位消费人</string>
    <string name="_slessonuser">至少需要一位以上的消费人</string>
    <string name="_snopayuser">请选择至少一位消费人</string>
    <string name="_sback">返回</string>
    <string name="_sselectpaytype">请选择消费类型</string>
    <string name="_sselectuser">请选择消费人</string>
    <string name="_spayouttitle">账本：《%1$s》--共有%2$s笔消费</string>
    <string name="_snotdeletedefaultbook">不能删除默认账本</string>
    <string name="_spayoutdelete">删除消费</string>
    <string name="_sdeletepayout">删除</string>

    <string name="ButtonTextDot">.</string>
    <string name="ButtonTextOne">1</string>
    <string name="ButtonTextTwo">2</string>
    <string name="ButtonTextThree">3</string>
    <string name="ButtonTextFour">4</string>
    <string name="ButtonTextFive">5</string>
    <string name="ButtonTextSix">6</string>
    <string name="ButtonTextSeven">7</string>
    <string name="ButtonTextEight">8</string>
    <string name="ButtonTextNine">9</string>
    <string name="ButtonTextZero">0</string>
    <string name="ButtonTextChange">更正</string>
    <string name="ButtonTextOk">确定</string>

    <string name="_statistictitle">正在统计</string>
    <string name="_sstatisticwait">请稍候</string>
    <string-array name="payouttype">
        <item>均分</item>
        <item>借贷</item>
        <item>个人</item>
    </string-array>
    <string-array name="_amainlistmenu">
        <item>关于我们</item>
    </string-array>
    <string-array name="_abookmenu">
        <item>新建账本</item>
    </string-array>
    <string-array name="_ausermenu">
        <item>新建用户</item>
    </string-array>
    <string-array name="_atypelistmenu">
        <item>新建类别</item>
    </string-array>
    <string-array name="_ainituser">
        <item>隔壁老王</item>
        <item>村口老张</item>
    </string-array>
    <string-array name="_SQLiteDALclassName">
        <item>SQLiteDALuser</item>
        <item>SQLiteDALbook</item>
        <item>SQLiteDALtype</item>
        <item>SQLiteDALpayout</item>
        <item>SQLiteDALcreateview</item>
    </string-array>
    <string-array name="_abook">
        <item>日常开销</item>
    </string-array>
    <string-array name="_atype">
        <item>吃饭</item>
        <item>网购</item>
    </string-array>
    <string-array name="_spayout">
        <item>切换账本</item>
    </string-array>
    <string-array name="_sstatistic">
        <item>切换账本</item>
    </string-array>

</resources>
